# DesignPatterns

./: README.md
01_factory/: CMakeLists.txt  readme
01_factory/src/: algorithm.cpp  algorithm.h  main.cpp
